ghc-4335c07/testsuite/tests/parser/should_fail/readFail016.hs
-- !!! Infix decls w/ infix data constructors

module ShouldFail where

infix 6 |-

ps  |-  q:qs   = undefined
